# StarWeb

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  Makefile  THIRD_PARTY_LICENSES.md
.github/workflows/: build.yml  main.yml
src/browser/: browser.cpp  fetcher.cpp  globals.cpp  globals.hpp  layout.cpp  layout.hpp  media_player.hpp  media_player_ffmpeg.cpp  media_player_mac.mm  parser.cpp  parser.hpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp  theme.hpp  types.hpp
src/client/: client.cpp
src/common/: conn.hpp  net.hpp  tls.cpp  tls.hpp
src/server/: server.cpp
tools/: make_certs.sh
www/: cube.html  flexbox.html  index.html  inputs.html  lua-attack.html  lua.html  style.css
